kubernetes-manifests/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: argocd
  labels:
    app: backend-release
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend-release
  template:
    metadata:
      labels:
        app: backend-release
    spec:
      restartPolicy: Always
      containers:
      - name: backend-container
        image: registry.gitlab.com/personal-projects9993536/workshop-demo/backend-image:1660c5fd454bd1dd8f50272819fd4aea563fa2c9
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: '250Mi'
            cpu: '500m'
          limits:
            memory: '512Mi'
            cpu: '500m'
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 15
      imagePullSecrets:
      - name: gitlab-registry-secret
