kubernetes-manifests/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: argocd
  labels:
    app: frontend-release
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-release
  template:
    metadata:
      labels:
        app: frontend-release
    spec:
      restartPolicy: Always
      containers:
      - name: front-container
        image: registry.gitlab.com/personal-projects9993536/workshop-demo/front-image:1660c5fd454bd1dd8f50272819fd4aea563fa2c9
        ports:
        - containerPort: 4200
        resources:
          requests:
            memory: '250Mi'
            cpu: '500m'
          limits:
            memory: '512Mi'
            cpu: '500m'
        readinessProbe:
          tcpSocket:
            port: 4200
          initialDelaySeconds: 30
          periodSeconds: 15
        livenessProbe:
          tcpSocket:
            port: 4200
          initialDelaySeconds: 30
          periodSeconds: 15
      imagePullSecrets:
      - name: gitlab-registry-secret
