kubernetes-manifests/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: argocd
spec:
  selector:
    app: backend-release
  ports:
  - port: 8080
    targetPort: 8080
  type: ClusterIP
