kubernetes-manifests/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: argocd
spec:
  selector:
    app: frontend-release
  ports:
  - port: 4200
    targetPort: 4200
  type: NodePort
